--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@ asgiref==3.4.1
 Django==3.2.7
 django-crispy-forms==1.13.0
 django-widget-tweaks==1.4.8
+flake8==4.0.1
+mccabe==0.6.1
 Pillow==8.3.2
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pytz==2021.1
+send-email==201212
 sqlparse==0.4.2
