--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 asgiref==3.4.1
+atomicwrites==1.4.0
+attrs==21.2.0
+colorama==0.4.4
 Django==3.2.7
 django-crispy-forms==1.13.0
 django-widget-tweaks==1.4.8
 flake8==4.0.1
+iniconfig==1.1.1
 mccabe==0.6.1
+packaging==21.0
 Pillow==8.3.2
+pluggy==1.0.0
+py==1.10.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
+pyparsing==2.4.7
+pytest==6.2.5
 pytz==2021.1
 send-email==201212
 sqlparse==0.4.2
+toml==0.10.2
